add: MySQL과 Redis를 위한 Docker Compose 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.17.1'
 }
 
 tasks.named('test') {
