--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,6 @@ spring:
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-
   jpa:
     hibernate:
       ddl-auto: create
@@ -16,6 +15,14 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+
+  data:
+    redis:
+      host: localhost
+      timeout: 2000
+      password:
+      port: 6379
+
 
 logging:
   level:
